Projeto desenvolvido a partir do curso Eu Programo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       <title>Ada Lovelace</title>
       <link href="css/style.css" rel="stylesheet">
+      <link rel="shortcut icon" href="img/astronauta.png" type="image/x-icon">
     </head>
     <body>
       <h1>Mulheres que fizeram história na tecnologia</h1>
@@ -26,7 +27,7 @@
 
         <p>Augusta Ada King, condessa de Lovelace, nasceu em Londres em 1815, mais conhecida como Ada Lovelace, foi a primeira pessoa a escrever um algoritmo para ser processado por uma máquina na história da computação.</p>
 
-        <img src="img/adaPintura.png" alt=Pintura colorida da Ada"> 
+        <img src="img/adaPintura.png" alt="Pintura colorida da Ada"> 
 
         <section id="infancia">
 
@@ -105,7 +106,7 @@
         <input id="email" type="email">
 
          <label for="telefone">Telefone:</label>
-        <input id="telefone" type="number">
+        <input id="telefone" type="tel">
         
         <button id="botaoEnviar">Enviar</button>
 
